# mcp

./: .gitignore  Dockerfile  api.py  chat_ui.py  client.py  docker-compose.yml  host.py  langchain_client.py  mcp-setting.md  memo.md  model.py  pyproject.toml  test.py  test_ui.py
filesystem/: test.txt
tests/client/: docker-compose.yml  host.py  langchain_client.py
tests/server/: dict_test_host.py  docker-compose.yml  mcp_setting.json
